fixes jumping lines (#4782)
* fixes

* fix template

* fix frss.css

* fix Nord theme

--- a/p/themes/Alternative-Dark/adark.css
+++ b/p/themes/Alternative-Dark/adark.css
@@ -801,10 +801,6 @@ kbd {
 	font-size: 0.9rem;
 }
 
-.flux .website .favicon {
-	padding: 5px;
-}
-
 .flux .website a:hover .favicon,
 .flux a.website:hover .favicon {
 	filter: grayscale(50%);
