--- a/p/themes/Swage/swage.scss
+++ b/p/themes/Swage/swage.scss
@@ -1053,10 +1053,6 @@ form {
 		text-align: center;
 	}
 
-	.website .favicon {
-		padding: 5px;
-	}
-
 	label {
 		color: $color_light;
 		cursor: pointer;
